tests/negative_pomidory/SmokeTest/NestedSmokeTestFolder/nested_file.pomidor

!!Used for test_pomidor_run_all_and_nested_dir!!
@Feature CSV_data
@params del, max, prereq=login, data=pageObjects/csv_data_source.csv
@id CSV_Test_case#1
!!Comment first line - First, click on login_field #practice_menu_button page title
Navigate to #practice_page
First paragraph: type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field, and types <<City of
Birth>> in #name_field and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field

!!Used for test_pomidor_run_all_and_nested_dir #2!!
@Feature CSV_data1
@params delete_cookies, max, prereq=google_search ,DATA=pageObjects/csv_data_source.csv
@id CSV_Test_case#2
Navigate to #practice_page
!!Comment first line - First, click on login_field #practice_menu_button page title
Second paragraph: type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field, and types <<City of
Birth>> in #name_field and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field